--- a/index.html
+++ b/index.html
@@ -77,14 +77,16 @@
                 <!-- keyboard end -->
                 <!-- life score -->
                 <div class="flex justify-between w-3/4">
-                    <button class="btn rounded-full bg-purple-600 text-white px-4">Life
+                    <!-- display life -->
+                    <button class="btn rounded-full bg-purple-500 text-white px-4">Life
                         <img src="images/heart .svg.svg" alt="">
-                        <span>1</span>
+                        <span id="current-life">5</span>
                     </button>
+                    <!-- display score -->
                     <button class="btn rounded-full bg-purple-600 text-white px-4">
                         Score
                         <img src="images/dollar.svg.svg" alt="">
-                        <span>1</span>
+                        <span id="current-score">0</span>
                     </button>
                 </div>
             </div>
@@ -92,20 +94,23 @@
         </section>
         <!-- playground end -->
         <!-- final score start -->
-        <section class="score flex justify-center items-center min-h-screen hidden">
+        <section id="final-score" class=" flex justify-center items-center min-h-screen hidden">
             <div class="text-white text-center space-y-6 bg-[#FFFFFF33] rounded-xl p-5">
+                <h3 class="text-3xl">Game Over!</h3>
                 <h1 class="text-8xl ">
                     <span class="font-bold ">Score:</span>
-                    <span>14</span>
+                    <span id="lastScore">14</span>
                 </h1>
-                <button class="btn">Play Again</button>
+                <button onclick="play()" class="btn">Play Again</button>
                 <p>Practice will make you Pro</p>
             </div>
 
         </section>
     </main>
+   
     <script src="scripts/utility.js"></script>
     <script src="scripts/alpha-clash.js"></script>
+    <script src="scripts/quiz.js"></script>
 </body>
 
 </html>
